--- a/HUMMS.html
+++ b/HUMMS.html
@@ -75,7 +75,7 @@
           </div>
           <div class="container-fluid  " style="width: 90%; ">
             <h1 class="text-center">Welcome to HUMMS</h1>
-            <p> This strand covers a wide range of disciplines that delve into the investigation and inquiry of the human conditions that uses empirical, analytical, and critical methods of studying human behavior and societal changes. Students pursuing college degrees on this strand will have a deeper understanding of arts, culture, literature, politics, and society and how the complex interplay of these facets help them appreciate individual behavior and social group and the pressing issues corresponding them.
+            <p>  &nbsp; &nbsp;This strand covers a wide range of disciplines that delve into the investigation and inquiry of the human conditions that uses empirical, analytical, and critical methods of studying human behavior and societal changes. Students pursuing college degrees on this strand will have a deeper understanding of arts, culture, literature, politics, and society and how the complex interplay of these facets help them appreciate individual behavior and social group and the pressing issues corresponding them.
               It is an academic strand covering various fields that deal with the exploration of the human condition using analytical, critical, and empirical ways and thereby studying changes in society and human behavior. As per Britannica, humanities is the study of literature, history, arts, and philosophy
             </p>
              <h4><p>Possible College Courses for HUMSS:</p>
