--- a/STEM.html
+++ b/STEM.html
@@ -75,15 +75,17 @@
           </div>
           <div class="container-fluid ; " style="width: 90%; ">
             <h1 class="text-center">Welcome to STEM</h1>
-            <p>What is STEM course?
+            <p> &nbsp; &nbsp;What is STEM course?
               STEM stands for science, technology, engineering and mathematics and refers to any subjects that fall under these four disciplines. Because these things are never straightforward, there are also dozens of alternative versions of STEM (including STEAM, STREAM and METALS) but STEM is by far the most widely-used.STEM gives curious students the skills to tackle problems confidently and facilitates a more positive feeling about learning, greater self-confidence in students, and diffuses negative biases that contribute to the growth of individuals who are curious, confident and take the initiative when dealing with challenges.</p>
-              <h5 class="text-center"><p>Examples of Popular STEM Majors:</p>
-              <li>Biology</li>
-              <li>Computer science</li>
-              <li> Biotechnology</li>
-              <li>Information technology</li>
-              <li>Mechanical engineering</li>
-              <li>Software engineering</li></h5>
+              <h4 class="text-center"><p>Examples of Popular STEM Majors:</p>
+                <h4><p>Possible College Courses for STEM:</p>
+                  <li>Biology </li>
+                  <li>Computer Science</li>
+                  <li>Biotechnology </li>
+                  <li>Information Technology </li>
+                  <li>Mechanical Engineering</li>
+                  <li>Software Engineer</li>
+                  </h4>
             </div>
           </main>
         
