--- a/history.html
+++ b/history.html
@@ -104,10 +104,12 @@
         </div>
         <div id="goals">
           <h2>CORE VALUES</h2>
-            <p><li>Maka-Diyos</li>
-                <li>Maka-tao</li>
-                <li> Makakalikasan</li>
-               <li> Makabansa</li></p>
+          <ul class="card-text" style="color: black; text-align: center; margin: 0; font-size: 14px; line-height: 1; list-style-type: none; padding-left: 0;">
+            <li>Maka-Diyos</li> 
+            <li>Maka-tao</li>
+            <li>Makakalikasan</li>
+            <li>Makabansa</li> 
+          </ul>
         </div>
     </div>
    </section>
