--- a/admission.html
+++ b/admission.html
@@ -68,7 +68,9 @@
           </nav>
         </header>
           </head>
+          
           <body>
+            
             <main style="background-color:#0f351a ;color: white;">
               <br><br><br><br>
               <div class="container">
@@ -78,12 +80,12 @@
               </div>
               <br>
                 <div class="chs "></div>
-                <div class="justify-content-center align-item-center">
-                  <img src="pic/cnhs.jpg" class="d-block w-100" >
+                <div class="justify-content-center align-item-center ">
+                  <img style="height:400px"src="pic/cnhs.jpg" class="d-block w-100" >
                 </div>
                   <div class="container">
                     <div class="row">
-                      <div class="d-flex justify-content-center flex-column text-center col-lg-10 offset-lg-1" style="margin-top: -200px;">
+                      <div class="d-flex justify-content-center flex-column text-center col-lg-10 offset-lg-1" style="margin-top: -400px;">
                         <div class="enroll">
                         <h1 class="fw-bold display-4">Capas National High School</h1>
                         <h6 class="fw-bold">Enrollement is now open!</h6>
