--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 <main >
     <section id="img1" class="text-center">
       <div id="landing" class="col-sm-12 col-md-12 col-lg-12 mt-3">
-          <h1>Capas National High School</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sunt nemo! Cupiditate necessitatibus fugiat soluta magni dolore, voluptates dolores placeat id consequatur laudantium blanditiis earum sed corrupti ullam, magnam praesentium?
-          Officiis dolore corrupti exercitationem earum, Provident veniam, asperiores id dolore dolorum maiores, animi magnam eum soluta ratione illo ut!</p>    
+          <h1 class="mt-5">Capas National High School</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sunt nemo! Cupiditate necessitatibus fugiat soluta magni dolore, voluptates dolores placeat id consequatur laudantium blanditiis earum sed corrupti ullam, magnam praesentium
+          </p>    
        </div>
        <h1 style="color:white">&nbsp;</h1>
       </section>
@@ -184,55 +184,48 @@
 <!-- m/s -->  
 <section>
   <div class="d-flex justify-content-center mt-5  text-center " style="background-color:#0f351a; color: white;width:100% ;">
-      <div class="container">
-        <h1></h1>
-        <div class="container ">
-          <div class="row gx-3">
-              <div class="col-12 col-sm-12  col-md-6 col-lg-4 mt-5">
-                <div class="card rounded mx-auto d-block" style="height: 280px;  ">
-                  <div class="card-body" style="height:280px; background-color: whitesmoke;">
-                    <h2>MISSION</h2>
-                    <p class="card-text; text-align: center;" >
-                      &nbsp; To protect and promote the right of every Filipino to quality, equitable, culture-based, and complete basic education where:
-                      Students learn in a child-friendly, gender-sensitive, safe, and motivating environment.
-                      Teachers facilitate learning and constantly nurture every learner.
-                      Administrators and staff, as stewards of the institution, ensure an enabling and supportive environment for effective learning to happen.
-                      Family, community, and other stakeholders are actively engaged and share responsibility for developing life-long learners.                      
-                    </p>
-                  </div>
-                </div>
+        <div class="container">
+          <div class="card text-white bg-white mt-5 container" style="height: 280px;">
+            <div class="card-header" style="color: black; font-size: 30px;">MISSION</div>
+            <div class="card-body" style="width: 90%; margin: 0 auto; display: flex; align-items: center;">
+              <div class="container">
+                <p class="card-text" style="color: black; text-align: center; margin: 0; font-size: 14px; line-height: 1;">
+                  To protect and promote the right of every Filipino to quality, equitable, culture-based, and complete basic education where:
+                  Students learn in a child-friendly, gender-sensitive, safe, and motivating environment.
+                  Teachers facilitate learning and constantly nurture every learner.
+                  Administrators and staff, as stewards of the institution, ensure an enabling and supportive environment for effective learning to happen.
+                  Family, community, and other stakeholders are actively engaged and share responsibility for developing life-long learners.
+                </p>
               </div>
-              <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt-5">
-                <div class="card rounded mx-auto d-block" style="height: 280px;">
-                  <div class="card-body" style="height:280px; background-color: whitesmoke;">
-                    <h2>VISION</h2>
-                    <p class="card-text; text-align">
-                      &nbsp; We dream of Filipinos
-                      who passionately love their country
-                      and whose values and competencies
-                      enable them to realize their full potential
-                      and contribute meaningfully to building the nation.
-                      As a learner-centered public institution,
-                      the Department of Education
-                      continuously improves itself
-                      to better serve its stakeholders.
-                    </p>
-                  </div>
-                </div>
+            </div>
+          </div>
+          
+          <div class="card text-white bg-white mt-5 container" style="height: 280px;">
+            <div class="card-header" style="color: black; font-size: 30px;">VISION</div>
+            <div class="card-body" style="width: 90%; margin: 0 auto; display: flex; align-items: center;">
+              <div class="container">
+                <p class="card-text" style="color: black; text-align: center; margin: 0; font-size: 14px; line-height: 1;">
+                 We dream of Filipinos who passionately love their country and whose values and 
+                 competencies enable them to realize their full potential and contribute meaningfully to building the nation.
+                  As a learner-centered public institution, the Department of Education continuously improves itself to better serve its stakeholders.
+                </p>
               </div>
-              <div class="col-12 col-sm-12  col-md-6 col-lg-4 mt-5" " >
-                <div class="card rounded mx-auto d-block" style="height: 280px;">
-                  <div class="card-body"style="height:280px; background-color: whitesmoke;" >
-                    <h2>CORE VALUES</h2>
-                    <p class="card-text ">
-                      <li>Maka-Diyos</li> 
-                      <li> Maka-tao</li>
-                      <li>Makakalikasan</li>
-                      <li>Makabansa</li> 
-                   </p>
-                  </div>
-                </div>
+            </div>
+          </div>
+
+          <div class="card text-white bg-white mt-5 container" style="height: 280px;">
+            <div class="card-header" style="color: black; font-size: 30px;">CORE VALUES</div>
+            <div class="card-body" style="width: 90%; margin: 0 auto; display: flex; align-items: center;">
+              <div class="container">
+                <ul class="card-text" style="color: black; text-align: center; margin: 0; font-size: 14px; line-height: 1; list-style-type: none; padding-left: 0;">
+                  <li>Maka-Diyos</li> 
+                  <li>Maka-tao</li>
+                  <li>Makakalikasan</li>
+                  <li>Makabansa</li> 
+                </ul>
               </div>
+            </div>
+          </div>
            </div>       
         </div>
       </div>
@@ -253,6 +246,7 @@
  </footer>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+</div>
   </body>
 </html>
 
